src/OpenCvSharp.Native/include/open_cv_sharp/objdetect/aruco.h

typedef struct jyppx_ocv_aruco_dictionary jyppx_ocv_aruco_dictionary;
typedef struct jyppx_ocv_aruco_detector jyppx_ocv_aruco_detector;
typedef struct jyppx_ocv_aruco_board jyppx_ocv_aruco_board;
typedef struct jyppx_ocv_aruco_grid_board jyppx_ocv_aruco_grid_board;
typedef struct jyppx_ocv_aruco_charuco_board jyppx_ocv_aruco_charuco_board;
typedef struct jyppx_ocv_point2f
{
    float x;
    float y;
} jyppx_ocv_point2f;
typedef struct jyppx_ocv_point3f
{
    float x;
    float y;
    float z;
} jyppx_ocv_point3f;
typedef struct jyppx_ocv_aruco_refine_params
{
    float min_rep_distance;
    float error_correction_rate;
    int check_all_orders;
} jyppx_ocv_aruco_refine_params;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_set_refine_parameters(
    jyppx_ocv_aruco_detector* detector,
    const jyppx_ocv_aruco_refine_params* params);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_detect_markers_count(
    const jyppx_ocv_aruco_detector* detector,
    const jyppx_ocv_mat* image,
    int* marker_count,
    int* corner_point_count,
    int* rejected_count,
    int* rejected_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_detect_markers_fill(
    const jyppx_ocv_aruco_detector* detector,
    const jyppx_ocv_mat* image,
    int* corner_offsets,
    int corner_offset_capacity,
    jyppx_ocv_point2f* corners,
    int corner_capacity,
    int* ids,
    int id_capacity,
    int* rejected_offsets,
    int rejected_offset_capacity,
    jyppx_ocv_point2f* rejected_points,
    int rejected_point_capacity,
    int* marker_count,
    int* corner_point_count,
    int* rejected_count,
    int* rejected_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_detect_markers_with_confidence_count(
    const jyppx_ocv_aruco_detector* detector,
    const jyppx_ocv_mat* image,
    int* marker_count,
    int* corner_point_count,
    int* rejected_count,
    int* rejected_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_detect_markers_multi_dictionary_count(
    const jyppx_ocv_aruco_detector* detector,
    const jyppx_ocv_mat* image,
    int* marker_count,
    int* corner_point_count,
    int* rejected_count,
    int* rejected_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_detect_markers_multi_dictionary_fill(
    const jyppx_ocv_aruco_detector* detector,
    const jyppx_ocv_mat* image,
    int* corner_offsets,
    int corner_offset_capacity,
    jyppx_ocv_point2f* corners,
    int corner_capacity,
    int* ids,
    int id_capacity,
    int* dictionary_indices,
    int dictionary_index_capacity,
    int* rejected_offsets,
    int rejected_offset_capacity,
    jyppx_ocv_point2f* rejected_points,
    int rejected_point_capacity,
    int* marker_count,
    int* corner_point_count,
    int* rejected_count,
    int* rejected_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_detect_markers_with_confidence_fill(
    const jyppx_ocv_aruco_detector* detector,
    const jyppx_ocv_mat* image,
    int* corner_offsets,
    int corner_offset_capacity,
    jyppx_ocv_point2f* corners,
    int corner_capacity,
    int* ids,
    int id_capacity,
    float* confidence,
    int confidence_capacity,
    int* rejected_offsets,
    int rejected_offset_capacity,
    jyppx_ocv_point2f* rejected_points,
    int rejected_point_capacity,
    int* marker_count,
    int* corner_point_count,
    int* rejected_count,
    int* rejected_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_refine_detected_markers_count(
    const jyppx_ocv_aruco_detector* detector,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_aruco_grid_board* board,
    const int* detected_offsets,
    int detected_group_count,
    const jyppx_ocv_point2f* detected_points,
    int detected_point_count,
    const int* detected_ids,
    int detected_id_count,
    const int* rejected_offsets,
    int rejected_group_count,
    const jyppx_ocv_point2f* rejected_points,
    int rejected_point_count,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    int* refined_marker_count,
    int* refined_corner_point_count,
    int* refined_rejected_count,
    int* refined_rejected_point_count,
    int* recovered_index_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_refine_detected_markers_fill(
    const jyppx_ocv_aruco_detector* detector,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_aruco_grid_board* board,
    const int* detected_offsets,
    int detected_group_count,
    const jyppx_ocv_point2f* detected_points,
    int detected_point_count,
    const int* detected_ids,
    int detected_id_count,
    const int* rejected_offsets,
    int rejected_group_count,
    const jyppx_ocv_point2f* rejected_points,
    int rejected_point_count,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    int* refined_offsets,
    int refined_offset_capacity,
    jyppx_ocv_point2f* refined_points,
    int refined_point_capacity,
    int* refined_ids,
    int refined_id_capacity,
    int* refined_rejected_offsets,
    int refined_rejected_offset_capacity,
    jyppx_ocv_point2f* refined_rejected_points,
    int refined_rejected_point_capacity,
    int* recovered_indices,
    int recovered_index_capacity,
    int* refined_marker_count,
    int* refined_corner_point_count,
    int* refined_rejected_count,
    int* refined_rejected_point_count,
    int* recovered_index_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_board_create(
    const int* object_point_offsets,
    int marker_count,
    const jyppx_ocv_point3f* object_points,
    int object_point_count,
    const jyppx_ocv_aruco_dictionary* dictionary,
    const int* ids,
    int id_count,
    jyppx_ocv_aruco_board** board);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_aruco_board_release_handle(
    jyppx_ocv_aruco_board* board);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_board_get_dictionary(
    const jyppx_ocv_aruco_board* board,
    jyppx_ocv_aruco_dictionary** dictionary);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_board_get_object_points_count(
    const jyppx_ocv_aruco_board* board,
    int* marker_count,
    int* object_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_board_get_object_points_fill(
    const jyppx_ocv_aruco_board* board,
    int* offsets,
    int offset_capacity,
    jyppx_ocv_point3f* points,
    int point_capacity,
    int* marker_count,
    int* object_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_board_get_ids_count(
    const jyppx_ocv_aruco_board* board,
    int* id_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_board_get_ids_fill(
    const jyppx_ocv_aruco_board* board,
    int* ids,
    int id_capacity,
    int* id_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_board_get_right_bottom_corner(
    const jyppx_ocv_aruco_board* board,
    jyppx_ocv_point3f* corner);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_board_match_image_points(
    const jyppx_ocv_aruco_board* board,
    const int* detected_offsets,
    int detected_group_count,
    const jyppx_ocv_point2f* detected_points,
    int detected_point_count,
    const int* detected_ids,
    int detected_id_count,
    jyppx_ocv_mat* object_points,
    jyppx_ocv_mat* image_points);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_board_generate_image(
    const jyppx_ocv_aruco_board* board,
    int width,
    int height,
    jyppx_ocv_mat* image,
    int margin_size,
    int border_bits);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_draw_detected_markers(
    jyppx_ocv_mat* image,
    const int* corner_offsets,
    int marker_count,
    const jyppx_ocv_point2f* corners,
    int corner_point_count,
    const int* ids,
    int id_count,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_grid_board_create(
    int markers_x,
    int markers_y,
    float marker_length,
    float marker_separation,
    const jyppx_ocv_aruco_dictionary* dictionary,
    const int* ids,
    int id_count,
    jyppx_ocv_aruco_grid_board** board);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_aruco_grid_board_release_handle(
    jyppx_ocv_aruco_grid_board* board);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_grid_board_get_grid_size(
    const jyppx_ocv_aruco_grid_board* board,
    int* markers_x,
    int* markers_y);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_grid_board_get_marker_length(
    const jyppx_ocv_aruco_grid_board* board,
    float* marker_length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_grid_board_get_marker_separation(
    const jyppx_ocv_aruco_grid_board* board,
    float* marker_separation);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_grid_board_generate_image(
    const jyppx_ocv_aruco_grid_board* board,
    int width,
    int height,
    jyppx_ocv_mat* image,
    int margin_size,
    int border_bits);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_charuco_board_create(
    int squares_x,
    int squares_y,
    float square_length,
    float marker_length,
    const jyppx_ocv_aruco_dictionary* dictionary,
    const int* ids,
    int id_count,
    jyppx_ocv_aruco_charuco_board** board);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_aruco_charuco_board_release_handle(
    jyppx_ocv_aruco_charuco_board* board);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_charuco_board_get_chessboard_size(
    const jyppx_ocv_aruco_charuco_board* board,
    int* squares_x,
    int* squares_y);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_charuco_board_get_square_length(
    const jyppx_ocv_aruco_charuco_board* board,
    float* square_length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_charuco_board_get_marker_length(
    const jyppx_ocv_aruco_charuco_board* board,
    float* marker_length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_charuco_board_get_legacy_pattern(
    const jyppx_ocv_aruco_charuco_board* board,
    int* legacy_pattern);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_charuco_board_set_legacy_pattern(
    jyppx_ocv_aruco_charuco_board* board,
    int legacy_pattern);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_charuco_board_get_chessboard_corners_count(
    const jyppx_ocv_aruco_charuco_board* board,
    int* corner_count);