src/OpenCvSharp/Internal/Interop/NativeMethods.ObjDetect.Aruco.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_set_refine_parameters")]
        internal static partial int ArucoDetectorSetRefineParameters(IntPtr detector, ref ArucoRefineParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_detect_markers_count")]
        internal static partial int ArucoDetectorDetectMarkersCount(IntPtr detector, IntPtr image, out int markerCount, out int cornerPointCount, out int rejectedCount, out int rejectedPointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_detect_markers_fill")]
        internal static partial int ArucoDetectorDetectMarkersFill(IntPtr detector, IntPtr image, int* cornerOffsets, int cornerOffsetCapacity, Point2fNative* corners, int cornerCapacity, int* ids, int idCapacity, int* rejectedOffsets, int rejectedOffsetCapacity, Point2fNative* rejectedPoints, int rejectedPointCapacity, out int markerCount, out int cornerPointCount, out int rejectedCount, out int rejectedPointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_detect_markers_with_confidence_count")]
        internal static partial int ArucoDetectorDetectMarkersWithConfidenceCount(IntPtr detector, IntPtr image, out int markerCount, out int cornerPointCount, out int rejectedCount, out int rejectedPointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_detect_markers_multi_dictionary_count")]
        internal static partial int ArucoDetectorDetectMarkersMultiDictionaryCount(IntPtr detector, IntPtr image, out int markerCount, out int cornerPointCount, out int rejectedCount, out int rejectedPointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_detect_markers_multi_dictionary_fill")]
        internal static unsafe partial int ArucoDetectorDetectMarkersMultiDictionaryFill(IntPtr detector, IntPtr image, int* cornerOffsets, int cornerOffsetCapacity, Point2fNative* corners, int cornerCapacity, int* ids, int idCapacity, int* dictionaryIndices, int dictionaryIndexCapacity, int* rejectedOffsets, int rejectedOffsetCapacity, Point2fNative* rejectedPoints, int rejectedPointCapacity, out int markerCount, out int cornerPointCount, out int rejectedCount, out int rejectedPointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_detect_markers_with_confidence_fill")]
        internal static partial int ArucoDetectorDetectMarkersWithConfidenceFill(IntPtr detector, IntPtr image, int* cornerOffsets, int cornerOffsetCapacity, Point2fNative* corners, int cornerCapacity, int* ids, int idCapacity, float* confidence, int confidenceCapacity, int* rejectedOffsets, int rejectedOffsetCapacity, Point2fNative* rejectedPoints, int rejectedPointCapacity, out int markerCount, out int cornerPointCount, out int rejectedCount, out int rejectedPointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_refine_detected_markers_count")]
        internal static partial int ArucoDetectorRefineDetectedMarkersCount(IntPtr detector, IntPtr image, IntPtr board, int* detectedOffsets, int detectedGroupCount, Point2fNative* detectedPoints, int detectedPointCount, int* detectedIds, int detectedIdCount, int* rejectedOffsets, int rejectedGroupCount, Point2fNative* rejectedPoints, int rejectedPointCount, IntPtr cameraMatrix, IntPtr distCoeffs, out int refinedMarkerCount, out int refinedCornerPointCount, out int refinedRejectedCount, out int refinedRejectedPointCount, out int recoveredIndexCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_refine_detected_markers_fill")]
        internal static partial int ArucoDetectorRefineDetectedMarkersFill(IntPtr detector, IntPtr image, IntPtr board, int* detectedOffsets, int detectedGroupCount, Point2fNative* detectedPoints, int detectedPointCount, int* detectedIds, int detectedIdCount, int* rejectedOffsets, int rejectedGroupCount, Point2fNative* rejectedPoints, int rejectedPointCount, IntPtr cameraMatrix, IntPtr distCoeffs, int* refinedOffsets, int refinedOffsetCapacity, Point2fNative* refinedPoints, int refinedPointCapacity, int* refinedIds, int refinedIdCapacity, int* refinedRejectedOffsets, int refinedRejectedOffsetCapacity, Point2fNative* refinedRejectedPoints, int refinedRejectedPointCapacity, int* recoveredIndices, int recoveredIndexCapacity, out int refinedMarkerCount, out int refinedCornerPointCount, out int refinedRejectedCount, out int refinedRejectedPointCount, out int recoveredIndexCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_grid_board_create")]
        internal static partial int ArucoGridBoardCreate(int markersX, int markersY, float markerLength, float markerSeparation, IntPtr dictionary, int[] ids, int idCount, out IntPtr board);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_board_create")]
        internal static unsafe partial int ArucoBoardCreate(int* objectPointOffsets, int markerCount, Point3fNative* objectPoints, int objectPointCount, IntPtr dictionary, int* ids, int idCount, out IntPtr board);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_board_release_handle")]
        internal static partial void ArucoBoardReleaseHandle(IntPtr board);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_board_get_dictionary")]
        internal static partial int ArucoBoardGetDictionary(IntPtr board, out IntPtr dictionary);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_board_get_object_points_count")]
        internal static partial int ArucoBoardGetObjectPointsCount(IntPtr board, out int markerCount, out int objectPointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_board_get_object_points_fill")]
        internal static unsafe partial int ArucoBoardGetObjectPointsFill(IntPtr board, int* offsets, int offsetCapacity, Point3fNative* points, int pointCapacity, out int markerCount, out int objectPointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_board_get_ids_count")]
        internal static partial int ArucoBoardGetIdsCount(IntPtr board, out int idCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_board_get_ids_fill")]
        internal static unsafe partial int ArucoBoardGetIdsFill(IntPtr board, int* ids, int idCapacity, out int idCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_board_get_right_bottom_corner")]
        internal static partial int ArucoBoardGetRightBottomCorner(IntPtr board, out Point3fNative corner);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_board_match_image_points")]
        internal static unsafe partial int ArucoBoardMatchImagePoints(IntPtr board, int* detectedOffsets, int detectedGroupCount, Point2fNative* detectedPoints, int detectedPointCount, int* detectedIds, int detectedIdCount, IntPtr objectPoints, IntPtr imagePoints);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_board_generate_image")]
        internal static partial int ArucoBoardGenerateImage(IntPtr board, int width, int height, IntPtr image, int marginSize, int borderBits);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_draw_detected_markers")]
        internal static unsafe partial int ArucoDrawDetectedMarkers(IntPtr image, int* cornerOffsets, int markerCount, Point2fNative* corners, int cornerPointCount, int* ids, int idCount, double colorV0, double colorV1, double colorV2, double colorV3);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_grid_board_create")]
        internal static partial int ArucoGridBoardCreate(int markersX, int markersY, float markerLength, float markerSeparation, IntPtr dictionary, int* ids, int idCount, out IntPtr board);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_grid_board_release_handle")]
        internal static partial void ArucoGridBoardReleaseHandle(IntPtr board);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_grid_board_get_grid_size")]
        internal static partial int ArucoGridBoardGetGridSize(IntPtr board, out int markersX, out int markersY);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_grid_board_get_marker_length")]
        internal static partial int ArucoGridBoardGetMarkerLength(IntPtr board, out float markerLength);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_grid_board_get_marker_separation")]
        internal static partial int ArucoGridBoardGetMarkerSeparation(IntPtr board, out float markerSeparation);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_grid_board_generate_image")]
        internal static partial int ArucoGridBoardGenerateImage(IntPtr board, int width, int height, IntPtr image, int marginSize, int borderBits);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_create")]
        internal static partial int ArucoCharucoBoardCreate(int squaresX, int squaresY, float squareLength, float markerLength, IntPtr dictionary, int[] ids, int idCount, out IntPtr board);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_create")]
        internal static partial int ArucoCharucoBoardCreate(int squaresX, int squaresY, float squareLength, float markerLength, IntPtr dictionary, int* ids, int idCount, out IntPtr board);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_release_handle")]
        internal static partial void ArucoCharucoBoardReleaseHandle(IntPtr board);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_get_chessboard_size")]
        internal static partial int ArucoCharucoBoardGetChessboardSize(IntPtr board, out int squaresX, out int squaresY);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_get_square_length")]
        internal static partial int ArucoCharucoBoardGetSquareLength(IntPtr board, out float squareLength);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_get_marker_length")]
        internal static partial int ArucoCharucoBoardGetMarkerLength(IntPtr board, out float markerLength);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_get_legacy_pattern")]
        internal static partial int ArucoCharucoBoardGetLegacyPattern(IntPtr board, out int legacyPattern);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_set_legacy_pattern")]
        internal static partial int ArucoCharucoBoardSetLegacyPattern(IntPtr board, int legacyPattern);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_get_chessboard_corners_count")]
        internal static partial int ArucoCharucoBoardGetChessboardCornersCount(IntPtr board, out int cornerCount);
